[gd_scene load_steps=4 format=4 uid="uid://boabosuda7wsv"]

[ext_resource type="Script" path="res://Scenes/DeathScene.gd" id="1_ugm2f"]
[ext_resource type="TileSet" uid="uid://7esbs755rryu" path="res://Scenes/MainMenu.tres" id="2_w0g6g"]
[ext_resource type="FontFile" uid="uid://cl4xtiep36hcy" path="res://GrapeSoda.ttf" id="2_xf1f3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugm2f")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAD9//3/AAABAAAAAQD9//7/AAABAAEAAQD9////AAABAAEAAQD9/wAAAAABAAEAAwD9/wEAAAABAAEAAgD9/wIAAAABAAEAAwD9/wMAAAABAAEAAAD9/wQAAAABAAAAAAD9/wUAAAABAAAAAQD9/wYAAAABAAAAAgD9/wcAAAABAAAAAAD9/wgAAAABAAAAAQD9/wkAAAABAAAAAgD9/woAAAABAAAAAwD+//3/AAABAAAAAgD+//7/AAABAAEAAgD+////AAABAAEAAAD+/wAAAAABAAEAAwD+/wEAAAABAAEAAQD+/wIAAAABAAEAAwD+/wMAAAABAAEAAQD+/wQAAAABAAEAAAD+/wUAAAABAAAAAAD+/wYAAAABAAAAAAD+/wcAAAABAAAAAwD+/wgAAAABAAAAAgD+/wkAAAABAAAAAwD+/woAAAABAAAAAQD///3/AAABAAAAAAD///7/AAABAAEAAQD/////AAABAAEAAgD//wAAAAABAAEAAQD//wEAAAABAAEAAQD//wIAAAABAAEAAAD//wMAAAABAAEAAQD//wQAAAABAAEAAgD//wUAAAABAAAAAQD//wYAAAABAAAAAwD//wcAAAABAAAAAAD//wgAAAABAAAAAQD//wkAAAABAAAAAQD//woAAAABAAAAAAAAAP3/AAABAAEAAQAAAP7/AAABAAEAAQAAAP//AAABAAEAAAAAAAAAAAABAAEAAwAAAAEAAAABAAEAAQAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAgAAAAUAAAABAAAAAwAAAAYAAAABAAAAAgAAAAcAAAABAAAAAQAAAAgAAAABAAAAAgAAAAkAAAABAAAAAAAAAAoAAAABAAAAAQABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAQABAAAAAAABAAEAAgABAAEAAAABAAEAAQABAAIAAAABAAEAAgABAAMAAAABAAEAAwABAAQAAAABAAEAAwABAAUAAAABAAAAAQABAAYAAAABAAAAAAABAAcAAAABAAAAAwABAAgAAAABAAAAAAABAAkAAAABAAAAAgABAAoAAAABAAAAAwACAP3/AAABAAEAAQACAP7/AAABAAEAAQACAP//AAABAAEAAwACAAAAAAABAAEAAQACAAEAAAABAAEAAgACAAIAAAABAAEAAwACAAMAAAABAAEAAgACAAQAAAABAAEAAAACAAUAAAABAAAAAQACAAYAAAABAAAAAwACAAcAAAABAAAAAwACAAgAAAABAAAAAwACAAkAAAABAAAAAgACAAoAAAABAAAAAwADAP3/AAABAAEAAAADAP7/AAABAAEAAQADAP//AAABAAEAAgADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAwADAAMAAAABAAEAAwADAAQAAAABAAAAAwADAAUAAAABAAAAAQADAAYAAAABAAAAAwADAAcAAAABAAAAAAADAAgAAAABAAAAAgADAAkAAAABAAAAAgADAAoAAAABAAAAAgAEAP3/AAABAAEAAQAEAP7/AAABAAEAAgAEAP//AAABAAEAAwAEAAAAAAABAAEAAQAEAAEAAAABAAEAAgAEAAIAAAABAAAAAAAEAAMAAAABAAAAAQAEAAQAAAABAAAAAwAEAAUAAAABAAAAAAAEAAYAAAABAAAAAgAEAAcAAAABAAAAAgAEAAgAAAABAAAAAAAEAAkAAAABAAAAAgAEAAoAAAABAAAAAgAFAP3/AAABAAAAAwAFAP7/AAABAAAAAQAFAP//AAABAAAAAAAFAAAAAAABAAAAAgAFAAEAAAABAAAAAgAFAAIAAAABAAAAAAAFAAMAAAABAAAAAAAFAAQAAAABAAAAAgAFAAUAAAABAAAAAAAFAAYAAAABAAAAAQAFAAcAAAABAAAAAQAFAAgAAAABAAAAAwAFAAkAAAABAAAAAgAFAAoAAAABAAAAAwAGAP3/AAABAAAAAQAGAP7/AAABAAAAAAAGAP//AAABAAAAAAAGAAAAAAABAAAAAgAGAAEAAAABAAAAAwAGAAIAAAABAAAAAgAGAAMAAAABAAAAAwAGAAQAAAABAAAAAwAGAAUAAAABAAAAAAAGAAYAAAABAAAAAQAGAAcAAAABAAAAAQAGAAgAAAABAAAAAAAGAAkAAAABAAAAAAAGAAoAAAABAAAAAAAHAP3/AAABAAAAAAAHAP7/AAABAAAAAAAHAP//AAABAAAAAQAHAAAAAAABAAAAAAAHAAEAAAABAAAAAQAHAAIAAAABAAAAAwAHAAMAAAABAAAAAAAHAAQAAAABAAAAAQAHAAUAAAABAAAAAAAHAAYAAAABAAAAAwAHAAcAAAABAAAAAgAHAAgAAAABAAAAAAAHAAkAAAABAAAAAgAHAAoAAAABAAAAAAAIAP3/AAABAAAAAgAIAP7/AAABAAAAAAAIAP//AAABAAAAAgAIAAAAAAABAAAAAgAIAAEAAAABAAAAAAAIAAIAAAABAAAAAAAIAAMAAAABAAAAAwAIAAQAAAABAAAAAgAIAAUAAAABAAAAAgAIAAYAAAABAAAAAAAIAAcAAAABAAAAAAAIAAgAAAABAAAAAQAIAAkAAAABAAAAAwAIAAoAAAABAAAAAQAJAP3/AAABAAAAAAAJAP7/AAABAAAAAAAJAP//AAABAAAAAgAJAAAAAAABAAAAAAAJAAEAAAABAAAAAwAJAAIAAAABAAAAAwAJAAMAAAABAAAAAQAJAAQAAAABAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAgAJAAcAAAABAAAAAgAJAAgAAAABAAAAAAAJAAkAAAABAAAAAQAJAAoAAAABAAAAAgAKAP3/AAABAAAAAQAKAP7/AAABAAAAAQAKAP//AAABAAAAAAAKAAAAAAABAAAAAAAKAAEAAAABAAAAAAAKAAIAAAABAAAAAgAKAAMAAAABAAAAAwAKAAQAAAABAAAAAgAKAAUAAAABAAAAAAAKAAYAAAABAAAAAwAKAAcAAAABAAAAAAAKAAgAAAABAAAAAQAKAAkAAAABAAAAAQAKAAoAAAABAAAAAQALAP3/AAABAAAAAwALAP7/AAABAAAAAwALAP//AAABAAAAAQALAAAAAAABAAAAAwALAAEAAAABAAAAAAALAAIAAAABAAAAAgALAAMAAAABAAAAAgALAAQAAAABAAAAAQALAAUAAAABAAAAAQALAAYAAAABAAAAAQALAAcAAAABAAAAAQALAAgAAAABAAAAAAALAAkAAAABAAAAAQALAAoAAAABAAAAAwAMAP3/AAABAAAAAQAMAP7/AAABAAAAAwAMAP//AAABAAAAAwAMAAAAAAABAAAAAgAMAAEAAAABAAAAAQAMAAIAAAABAAAAAgAMAAMAAAABAAAAAwAMAAQAAAABAAAAAwAMAAUAAAABAAAAAAAMAAYAAAABAAAAAwAMAAcAAAABAAAAAgAMAAgAAAABAAAAAgAMAAkAAAABAAAAAwAMAAoAAAABAAAAAgANAP3/AAABAAAAAwANAP7/AAABAAAAAgANAP//AAABAAAAAQANAAAAAAABAAAAAQANAAEAAAABAAAAAgANAAIAAAABAAAAAwANAAMAAAABAAAAAAANAAQAAAABAAAAAgANAAUAAAABAAAAAwANAAYAAAABAAAAAwANAAcAAAABAAAAAAANAAgAAAABAAAAAAANAAkAAAABAAAAAAANAAoAAAABAAAAAgD3//r/AAABAAAAAQD3//v/AAABAAAAAAD3//z/AAABAAAAAgD3//3/AAABAAAAAgD3//7/AAABAAAAAwD3////AAABAAAAAAD3/wAAAAABAAAAAwD3/wEAAAABAAAAAwD3/wIAAAABAAAAAAD3/wMAAAABAAAAAgD3/wQAAAABAAAAAAD3/wUAAAABAAAAAAD3/wYAAAABAAAAAwD3/wcAAAABAAAAAwD3/wgAAAABAAAAAAD3/wkAAAABAAAAAQD3/woAAAABAAAAAgD3/wsAAAABAAAAAAD3/wwAAAABAAAAAQD4//r/AAABAAAAAwD4//v/AAABAAAAAQD4//z/AAABAAAAAwD4//3/AAABAAAAAAD4//7/AAABAAAAAgD4////AAABAAAAAAD4/wAAAAABAAAAAgD4/wEAAAABAAAAAAD4/wIAAAABAAAAAgD4/wMAAAABAAAAAAD4/wQAAAABAAAAAgD4/wUAAAABAAAAAQD4/wYAAAABAAAAAQD4/wcAAAABAAAAAAD4/wgAAAABAAAAAgD4/wkAAAABAAAAAwD4/woAAAABAAAAAQD4/wsAAAABAAAAAQD4/wwAAAABAAAAAwD5//r/AAABAAAAAQD5//v/AAABAAAAAQD5//z/AAABAAAAAwD5//3/AAABAAAAAQD5//7/AAABAAAAAAD5////AAABAAAAAAD5/wAAAAABAAAAAwD5/wEAAAABAAAAAgD5/wIAAAABAAAAAQD5/wMAAAABAAAAAwD5/wQAAAABAAAAAAD5/wUAAAABAAAAAgD5/wYAAAABAAAAAAD5/wcAAAABAAAAAgD5/wgAAAABAAAAAwD5/wkAAAABAAAAAwD5/woAAAABAAAAAgD5/wsAAAABAAAAAwD5/wwAAAABAAAAAwD6//r/AAABAAAAAwD6//v/AAABAAAAAAD6//z/AAABAAAAAQD6//3/AAABAAAAAAD6//7/AAABAAAAAQD6////AAABAAAAAAD6/wAAAAABAAAAAgD6/wEAAAABAAAAAgD6/wIAAAABAAAAAwD6/wMAAAABAAAAAAD6/wQAAAABAAAAAwD6/wUAAAABAAAAAgD6/wYAAAABAAAAAAD6/wcAAAABAAAAAQD6/wgAAAABAAAAAgD6/wkAAAABAAAAAQD6/woAAAABAAAAAwD6/wsAAAABAAAAAAD6/wwAAAABAAAAAQD7//r/AAABAAAAAgD7//v/AAABAAAAAAD7//z/AAABAAAAAgD7//3/AAABAAAAAAD7//7/AAABAAAAAAD7////AAABAAAAAwD7/wAAAAABAAAAAAD7/wEAAAABAAAAAAD7/wIAAAABAAAAAwD7/wMAAAABAAAAAgD7/wQAAAABAAAAAQD7/wUAAAABAAAAAQD7/wYAAAABAAAAAwD7/wcAAAABAAAAAQD7/wgAAAABAAAAAQD7/wkAAAABAAAAAgD7/woAAAABAAAAAAD7/wsAAAABAAAAAQD7/wwAAAABAAAAAAD8//r/AAABAAAAAQD8//v/AAABAAAAAAD8//z/AAABAAAAAgD8//3/AAABAAAAAwD8//7/AAABAAAAAgD8////AAABAAEAAwD8/wAAAAABAAEAAQD8/wEAAAABAAEAAgD8/wIAAAABAAAAAAD8/wMAAAABAAAAAQD8/wQAAAABAAAAAQD8/wUAAAABAAAAAgD8/wYAAAABAAAAAAD8/wcAAAABAAAAAwD8/wgAAAABAAAAAAD8/wkAAAABAAAAAwD8/woAAAABAAAAAgD8/wsAAAABAAAAAwD8/wwAAAABAAAAAgD9//r/AAABAAAAAAD9//v/AAABAAAAAgD9//z/AAABAAAAAgD9/wsAAAABAAAAAQD9/wwAAAABAAAAAwD+//r/AAABAAAAAQD+//v/AAABAAAAAgD+//z/AAABAAAAAgD+/wsAAAABAAAAAQD+/wwAAAABAAAAAgD///r/AAABAAAAAwD///v/AAABAAAAAwD///z/AAABAAAAAwD//wsAAAABAAAAAgD//wwAAAABAAAAAAAAAPr/AAABAAAAAQAAAPv/AAABAAAAAAAAAPz/AAABAAAAAwAAAAsAAAABAAAAAgAAAAwAAAABAAAAAQABAPr/AAABAAAAAwABAPv/AAABAAAAAAABAPz/AAABAAAAAAABAAsAAAABAAAAAQABAAwAAAABAAAAAAACAPr/AAABAAAAAQACAPv/AAABAAAAAAACAPz/AAABAAAAAQACAAsAAAABAAAAAgACAAwAAAABAAAAAgADAPr/AAABAAAAAAADAPv/AAABAAAAAgADAPz/AAABAAAAAAADAAsAAAABAAAAAAADAAwAAAABAAAAAwAEAPr/AAABAAAAAgAEAPv/AAABAAAAAQAEAPz/AAABAAAAAwAEAAsAAAABAAAAAQAEAAwAAAABAAAAAgAFAPr/AAABAAAAAgAFAPv/AAABAAAAAAAFAPz/AAABAAAAAAAFAAsAAAABAAAAAwAFAAwAAAABAAAAAwAGAPr/AAABAAAAAAAGAPv/AAABAAAAAgAGAPz/AAABAAAAAgAGAAsAAAABAAAAAAAGAAwAAAABAAAAAAAHAPr/AAABAAAAAwAHAPv/AAABAAAAAwAHAPz/AAABAAAAAQAHAAsAAAABAAAAAQAHAAwAAAABAAAAAAAIAPr/AAABAAAAAAAIAPv/AAABAAAAAwAIAPz/AAABAAAAAwAIAAsAAAABAAAAAwAIAAwAAAABAAAAAQAJAPr/AAABAAAAAgAJAPv/AAABAAAAAAAJAPz/AAABAAAAAAAJAAsAAAABAAAAAQAJAAwAAAABAAAAAAAKAPr/AAABAAAAAgAKAPv/AAABAAAAAQAKAPz/AAABAAAAAwAKAAsAAAABAAAAAgAKAAwAAAABAAAAAwALAPr/AAABAAAAAwALAPv/AAABAAAAAgALAPz/AAABAAAAAwALAAsAAAABAAAAAQALAAwAAAABAAAAAQAMAPr/AAABAAAAAgAMAPv/AAABAAAAAAAMAPz/AAABAAAAAwAMAAsAAAABAAAAAgAMAAwAAAABAAAAAQANAPr/AAABAAAAAwANAPv/AAABAAAAAwANAPz/AAABAAAAAAANAAsAAAABAAAAAAANAAwAAAABAAAAAQAOAPr/AAABAAAAAAAOAPv/AAABAAAAAQAOAPz/AAABAAAAAAAOAP3/AAABAAAAAAAOAP7/AAABAAAAAgAOAP//AAABAAAAAgAOAAAAAAABAAAAAAAOAAEAAAABAAAAAAAOAAIAAAABAAAAAwAOAAMAAAABAAAAAgAOAAQAAAABAAAAAAAOAAUAAAABAAAAAwAOAAYAAAABAAAAAwAOAAcAAAABAAAAAwAOAAgAAAABAAAAAQAOAAkAAAABAAAAAwAOAAoAAAABAAAAAgAOAAsAAAABAAAAAwAOAAwAAAABAAAAAAAPAPr/AAABAAAAAwAPAPv/AAABAAAAAwAPAPz/AAABAAAAAQAPAP3/AAABAAAAAgAPAP7/AAABAAAAAgAPAP//AAABAAAAAwAPAAAAAAABAAAAAgAPAAEAAAABAAAAAQAPAAIAAAABAAAAAwAPAAMAAAABAAAAAwAPAAQAAAABAAAAAAAPAAUAAAABAAAAAQAPAAYAAAABAAAAAQAPAAcAAAABAAAAAwAPAAgAAAABAAAAAgAPAAkAAAABAAAAAAAPAAoAAAABAAAAAQAPAAsAAAABAAAAAgAPAAwAAAABAAAAAAAQAPr/AAABAAAAAgAQAPv/AAABAAAAAwAQAPz/AAABAAAAAAAQAP3/AAABAAAAAwAQAP7/AAABAAAAAwAQAP//AAABAAAAAgAQAAAAAAABAAAAAwAQAAEAAAABAAAAAQAQAAIAAAABAAAAAwAQAAMAAAABAAAAAwAQAAQAAAABAAAAAQAQAAUAAAABAAAAAAAQAAYAAAABAAAAAQAQAAcAAAABAAAAAQAQAAgAAAABAAAAAQAQAAkAAAABAAAAAQAQAAoAAAABAAAAAAAQAAsAAAABAAAAAwAQAAwAAAABAAAAAwARAPr/AAABAAAAAQARAPv/AAABAAAAAQARAPz/AAABAAAAAgARAP3/AAABAAAAAAARAP7/AAABAAAAAwARAP//AAABAAAAAQARAAAAAAABAAAAAAARAAEAAAABAAAAAQARAAIAAAABAAAAAgARAAMAAAABAAAAAAARAAQAAAABAAAAAQARAAUAAAABAAAAAwARAAYAAAABAAAAAAARAAcAAAABAAAAAQARAAgAAAABAAAAAwARAAkAAAABAAAAAgARAAoAAAABAAAAAwARAAsAAAABAAAAAQARAAwAAAABAAAAAgASAPr/AAABAAAAAQASAPv/AAABAAAAAgASAPz/AAABAAAAAAASAP3/AAABAAAAAQASAP7/AAABAAAAAAASAP//AAABAAAAAAASAAAAAAABAAAAAwASAAEAAAABAAAAAAASAAIAAAABAAAAAQASAAMAAAABAAAAAwASAAQAAAABAAAAAwASAAUAAAABAAAAAAASAAYAAAABAAAAAQASAAcAAAABAAAAAAASAAgAAAABAAAAAQASAAkAAAABAAAAAQASAAoAAAABAAAAAQASAAsAAAABAAAAAAASAAwAAAABAAAAAAATAPr/AAABAAAAAAATAPv/AAABAAAAAgATAPz/AAABAAAAAwATAP3/AAABAAAAAgATAP7/AAABAAAAAAATAP//AAABAAAAAwATAAAAAAABAAAAAwATAAEAAAABAAAAAAATAAIAAAABAAAAAQATAAMAAAABAAAAAQATAAQAAAABAAAAAQATAAUAAAABAAAAAQATAAYAAAABAAAAAQATAAcAAAABAAAAAQATAAgAAAABAAAAAwATAAkAAAABAAAAAwATAAoAAAABAAAAAwATAAsAAAABAAAAAAATAAwAAAABAAAAAwAUAPr/AAABAAAAAgAUAPv/AAABAAAAAwAUAPz/AAABAAAAAwAUAP3/AAABAAAAAgAUAP7/AAABAAAAAAAUAP//AAABAAAAAAAUAAAAAAABAAAAAwAUAAEAAAABAAAAAQAUAAIAAAABAAAAAAAUAAMAAAABAAAAAgAUAAQAAAABAAAAAAAUAAUAAAABAAAAAwAUAAYAAAABAAAAAQAUAAcAAAABAAAAAAAUAAgAAAABAAAAAgAUAAkAAAABAAAAAgAUAAoAAAABAAAAAQAUAAsAAAABAAAAAgAUAAwAAAABAAAAAAAVAPr/AAABAAAAAQAVAPv/AAABAAAAAgAVAPz/AAABAAAAAQAVAP3/AAABAAAAAQAVAP7/AAABAAAAAgAVAP//AAABAAAAAwAVAAAAAAABAAAAAgAVAAEAAAABAAAAAgAVAAIAAAABAAAAAAAVAAMAAAABAAAAAAAVAAQAAAABAAAAAwAVAAUAAAABAAAAAAAVAAYAAAABAAAAAgAVAAcAAAABAAAAAwAVAAgAAAABAAAAAwAVAAkAAAABAAAAAAAVAAoAAAABAAAAAgAVAAsAAAABAAAAAAAVAAwAAAABAAAAAQAHAPn/AAABAAAAAAAIAPn/AAABAAAAAgAJAPn/AAABAAAAAQAKAPn/AAABAAAAAQALAPn/AAABAAAAAQAMAPn/AAABAAAAAQANAPn/AAABAAAAAAAOAPn/AAABAAAAAQAPAPn/AAABAAAAAAAQAPn/AAABAAAAAQARAPn/AAABAAAAAQASAPn/AAABAAAAAwATAPn/AAABAAAAAgAUAPn/AAABAAAAAAAVAPn/AAABAAAAAgAWAPn/AAABAAAAAgAWAPr/AAABAAAAAwAWAPv/AAABAAAAAwAWAPz/AAABAAAAAwAWAP3/AAABAAAAAwAWAP7/AAABAAAAAgAWAP//AAABAAAAAAAWAAAAAAABAAAAAgAWAAEAAAABAAAAAgAWAAIAAAABAAAAAgAWAAMAAAABAAAAAQAWAAQAAAABAAAAAwAWAAUAAAABAAAAAQAWAAYAAAABAAAAAQAWAAcAAAABAAAAAgAWAAgAAAABAAAAAwAWAAkAAAABAAAAAgAWAAoAAAABAAAAAAAWAAsAAAABAAAAAwAWAAwAAAABAAAAAQA=")
tile_set = ExtResource("2_w0g6g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.685726, 0.0975276, 0.0675426, 1)
theme_override_colors/font_shadow_color = Color(0.360784, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 126
text = "You lose."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TreesFreed" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 36
text = "Trees Freed: 100"

[node name="WavesSurvived" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 36
text = "Waves Survived: 10"

[node name="UpgradesPurchaed" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 36
text = "Upgrades Purchased: 100"

[node name="StartMenu" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 36
text = "Replay?"

[node name="Quit" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xf1f3")
theme_override_font_sizes/font_size = 36
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartMenu" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
